crates/service/tests/completion/snapshots/features__completion__annotation__call_targets_incomplete.snap
---
source: crates/service/tests/completion/annotation.rs
expression: response
---
[
  {
    "label": "target",
    "kind": 15
  }
]
