crates/service/tests/completion/snapshots/features__completion__annotation__compilation_priority_incomplete.snap
---
source: crates/service/tests/completion/annotation.rs
expression: response
---
[
  {
    "label": "compilation",
    "kind": 15
  },
  {
    "label": "optimization",
    "kind": 15
  },
  {
    "label": "run_once",
    "kind": 15
  }
]
