crates/service/tests/completion/snapshots/features__completion__annotation__incomplete.snap
---
source: crates/service/tests/completion/annotation.rs
expression: response
---
[
  {
    "label": "deprecated",
    "kind": 15
  },
  {
    "label": "custom",
    "kind": 15
  },
  {
    "label": "name",
    "kind": 15
  },
  {
    "label": "js",
    "kind": 15
  },
  {
    "label": "metadata.code.branch_hint",
    "kind": 15
  },
  {
    "label": "metadata.code.compilation_priority",
    "kind": 15
  },
  {
    "label": "metadata.code.instr_freq",
    "kind": 15
  },
  {
    "label": "metadata.code.call_targets",
    "kind": 15
  }
]
