crates/service/tests/completion/snapshots/features__completion__annotation__instr_freq.snap
---
source: crates/service/tests/completion/annotation.rs
expression: response
---
[
  {
    "label": "freq",
    "kind": 15
  }
]
